--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>
     Trial web page
 </title>
-<link rel="stylesheet" href="C:\Users\Vilian\Desktop\web development\styles.css">
+<link rel="stylesheet" href="https://github.com/shiva301099/CV/blob/master/styles.css">
 <body>
     <center>
     
