--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ h3{
     Trial web page
 </title>
 <link rel="stylesheet" href="/styles.css">
+    <link rel="icon" href="favicon.ico">
 <body>
     <center>
     
