--- a/stylesite.html
+++ b/stylesite.html
@@ -1,7 +1,7 @@
 <html>
    <head>
      <link href="https://fonts.googleapis.com/css2?family=Merriweather&family=Montserrat:ital,wght@1,600&family=Sacramento&display=swap" rel="stylesheet">
-     <link rel="icon" href="favicon.ico">
+     <link rel="icon" href="https://raw.githubusercontent.com/shiva301099/CV/master/favicon.ico">
 
     <style>
     body{
