--- a/stylesite.html
+++ b/stylesite.html
@@ -8,6 +8,7 @@
       margin: 0;
       font-family: 'Merriweather', serif;
       text-align: center;
+      background-image: linear-gradient(to right, rgba(66, 66, 66, 0), rgb(209, 212, 0));
   }
   h1{
       font-size: 90px;
